tests/baselines/reference/conflictMarkerTrivia1.errors.txt
tests/cases/compiler/conflictMarkerTrivia1.ts(2,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerTrivia1.ts(4,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerTrivia1.ts(6,1): error TS1185: Merge conflict marker encountered.


==== tests/cases/compiler/conflictMarkerTrivia1.ts (3 errors) ====
    class C {
    <<<<<<< HEAD
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
        v = 1;
    =======
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
        v = 2;
    >>>>>>> Branch-a
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
    }